// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Add and update aircrafts Get aircraft with valid registration should return the aircraft 1`] = `
{
  "active": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "displayName": "Test plane",
  "documents": [],
  "equipment": "test",
  "fuelTypes": [
    "100LL",
  ],
  "hidden": false,
  "hourlyRateEur": 100,
  "location": "test",
  "maintenance": {
    "lastMaintenanceDate": "2023-10-01",
    "lastMaintenanceMins": 6000,
    "lastMaintenanceType": "100h",
    "maintenanceCycle": 100,
    "nextMaintenanceDate": null,
    "nextMaintenanceMins": 9000,
    "nextMaintenanceType": "50h",
    "reservedHours": 2,
    "totalPercentageHours": 5,
  },
  "manufacturer": "Jest",
  "model": "Jest",
  "notes": [],
  "registration": "OH-TST",
  "seats": 2,
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
  "usableFuelLitres": 100,
  "yearOfManufacture": 2000,
}
`;

exports[`Add and update aircrafts Get aircraft with valid registration should return the aircraft 2`] = `
{
  "active": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "displayName": "Test plane 2",
  "documents": [],
  "equipment": "test",
  "fuelTypes": [
    "100LL",
  ],
  "hidden": false,
  "imageUrl": null,
  "location": "test",
  "maintenance": {
    "lastMaintenanceDate": "2023-10-01",
    "lastMaintenanceMins": 6000,
    "lastMaintenanceType": "100h",
    "maintenanceCycle": 100,
    "nextMaintenanceDate": null,
    "nextMaintenanceMins": 9000,
    "nextMaintenanceType": "50h",
    "reservedHours": 2,
    "totalPercentageHours": 5,
  },
  "manufacturer": "Jest",
  "model": "Jest",
  "notes": [],
  "preferredFuelType": null,
  "registration": "OH-TST",
  "seats": 2,
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
  "usableFuelLitres": 100,
  "yearOfManufacture": 2000,
}
`;

exports[`GET /aircrafts should return all aircrafts as an admin 1`] = `
[
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DA40",
    "documents": [],
    "equipment": "SDFGY/S",
    "fuelTypes": [
      "JET A-1",
    ],
    "hidden": false,
    "imageUrl": "https://www.flyfinland.fi/photos/original/29416.jpg",
    "location": "EFNU BF-hangar 21",
    "maintenance": {
      "lastMaintenanceDate": "2024-11-10",
      "lastMaintenanceMins": 282540,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 100,
      "nextMaintenanceDate": null,
      "nextMaintenanceMins": 286680,
      "nextMaintenanceType": "100h",
      "reservedHours": 2,
      "totalPercentageHours": 10,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DA40",
    "notes": [
      {
        "severity": "note",
        "text": "Keep oil quantity level in the middle of the approved range - do not add to full!",
      },
    ],
    "preferredFuelType": "JET A-1",
    "registration": "OH-STL",
    "seats": 4,
    "status": {
      "cautions": [],
      "lastLandingAirport": "EFHK",
      "lastLandingTimeUtc": "2026-07-14T09:25:00.000Z",
      "minsUntilNextMaintenance": -416710,
      "remainingFuelLitres": 20,
      "totalTime": "11723:10",
      "usableMins": -416230,
      "warnings": [],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 148,
    "yearOfManufacture": 2007,
  },
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DV20",
    "documents": [],
    "equipment": "VOY/S",
    "fuelTypes": [
      "MOGAS 98E5",
      "MOGAS 95E10",
      "100LL",
    ],
    "hidden": false,
    "imageUrl": "https://cdn.jetphotos.com/full/5/69415_1600241420.jpg",
    "location": "EFNU Cumulus Hangar",
    "maintenance": {
      "lastMaintenanceDate": "2025-03-01",
      "lastMaintenanceMins": 365100,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 50,
      "nextMaintenanceDate": null,
      "nextMaintenanceMins": 367800,
      "nextMaintenanceType": "50h",
      "reservedHours": 2,
      "totalPercentageHours": 5,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DV20",
    "notes": [
      {
        "severity": "caution",
        "text": "Koneen palosammutin on huollossa. Ei ole pakollinen varuste, mutta huomioitava!",
      },
    ],
    "preferredFuelType": "MOGAS 98E5",
    "registration": "OH-IHQ",
    "seats": 2,
    "status": {
      "cautions": [],
      "lastLandingAirport": "EFHK",
      "lastLandingTimeUtc": "2025-05-03T11:10:00.000Z",
      "minsUntilNextMaintenance": -432380,
      "remainingFuelLitres": 25,
      "totalTime": "13336:20",
      "usableMins": -432200,
      "warnings": [],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 77,
    "yearOfManufacture": 2010,
  },
  {
    "active": false,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Piper PA-28",
    "documents": [],
    "equipment": "SFD",
    "fuelTypes": [
      "100LL",
    ],
    "hidden": false,
    "imageUrl": "https://cdn.jetphotos.com/full/6/927368_1715977239.jpg",
    "location": "EFNU",
    "maintenance": {
      "lastMaintenanceDate": "2024-04-15",
      "lastMaintenanceMins": 310800,
      "lastMaintenanceType": "50h",
      "maintenanceCycle": 50,
      "nextMaintenanceDate": "2025-05-05",
      "nextMaintenanceMins": 313800,
      "nextMaintenanceType": "50h",
      "reservedHours": 2,
      "totalPercentageHours": 5,
    },
    "manufacturer": "Piper Aircraft",
    "model": "PA-28",
    "notes": [
      {
        "severity": "warning",
        "text": "Waiting for annual",
      },
    ],
    "preferredFuelType": null,
    "registration": "OH-P28",
    "seats": 4,
    "status": {
      "cautions": [],
      "daysUntilNextMaintenance": 0,
      "lastLandingAirport": "EFHK",
      "lastLandingTimeUtc": "2026-04-03T22:10:00.000Z",
      "minsUntilNextMaintenance": -2135,
      "remainingFuelLitres": 16,
      "totalTime": "5265:35",
      "usableMins": -1955,
      "warnings": [],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 182,
    "yearOfManufacture": 2005,
  },
]
`;

exports[`GET /aircrafts should return only active aircrafts as a admin without sudo 1`] = `
[
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DA40",
    "documents": [],
    "equipment": "SDFGY/S",
    "fuelTypes": [
      "JET A-1",
    ],
    "hidden": false,
    "imageUrl": "https://www.flyfinland.fi/photos/original/29416.jpg",
    "location": "EFNU BF-hangar 21",
    "maintenance": {
      "lastMaintenanceDate": "2024-11-10",
      "lastMaintenanceMins": 282540,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 100,
      "nextMaintenanceDate": null,
      "nextMaintenanceMins": 286680,
      "nextMaintenanceType": "100h",
      "reservedHours": 2,
      "totalPercentageHours": 10,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DA40",
    "notes": [
      {
        "severity": "note",
        "text": "Keep oil quantity level in the middle of the approved range - do not add to full!",
      },
    ],
    "preferredFuelType": "JET A-1",
    "registration": "OH-STL",
    "seats": 4,
    "status": {
      "cautions": [],
      "lastLandingAirport": "EFHK",
      "lastLandingTimeUtc": "2026-07-14T09:25:00.000Z",
      "minsUntilNextMaintenance": -416710,
      "remainingFuelLitres": 20,
      "totalTime": "11723:10",
      "usableMins": -416230,
      "warnings": [],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 148,
    "yearOfManufacture": 2007,
  },
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DV20",
    "documents": [],
    "equipment": "VOY/S",
    "fuelTypes": [
      "MOGAS 98E5",
      "MOGAS 95E10",
      "100LL",
    ],
    "hidden": false,
    "imageUrl": "https://cdn.jetphotos.com/full/5/69415_1600241420.jpg",
    "location": "EFNU Cumulus Hangar",
    "maintenance": {
      "lastMaintenanceDate": "2025-03-01",
      "lastMaintenanceMins": 365100,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 50,
      "nextMaintenanceDate": null,
      "nextMaintenanceMins": 367800,
      "nextMaintenanceType": "50h",
      "reservedHours": 2,
      "totalPercentageHours": 5,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DV20",
    "notes": [
      {
        "severity": "caution",
        "text": "Koneen palosammutin on huollossa. Ei ole pakollinen varuste, mutta huomioitava!",
      },
    ],
    "preferredFuelType": "MOGAS 98E5",
    "registration": "OH-IHQ",
    "seats": 2,
    "status": {
      "cautions": [],
      "lastLandingAirport": "EFHK",
      "lastLandingTimeUtc": "2025-05-03T11:10:00.000Z",
      "minsUntilNextMaintenance": -432380,
      "remainingFuelLitres": 25,
      "totalTime": "13336:20",
      "usableMins": -432200,
      "warnings": [],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 77,
    "yearOfManufacture": 2010,
  },
]
`;

exports[`GET /aircrafts should return only active aircrafts as a user 1`] = `
[
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DA40",
    "documents": [],
    "equipment": "SDFGY/S",
    "fuelTypes": [
      "JET A-1",
    ],
    "hidden": false,
    "imageUrl": "https://www.flyfinland.fi/photos/original/29416.jpg",
    "location": "EFNU BF-hangar 21",
    "maintenance": {
      "lastMaintenanceDate": "2024-11-10",
      "lastMaintenanceMins": 282540,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 100,
      "nextMaintenanceDate": null,
      "nextMaintenanceMins": 286680,
      "nextMaintenanceType": "100h",
      "reservedHours": 2,
      "totalPercentageHours": 10,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DA40",
    "notes": [
      {
        "severity": "note",
        "text": "Keep oil quantity level in the middle of the approved range - do not add to full!",
      },
    ],
    "preferredFuelType": "JET A-1",
    "registration": "OH-STL",
    "seats": 4,
    "status": {
      "cautions": [],
      "lastLandingAirport": "EFHK",
      "lastLandingTimeUtc": "2026-07-14T09:25:00.000Z",
      "minsUntilNextMaintenance": -416710,
      "remainingFuelLitres": 20,
      "totalTime": "11723:10",
      "usableMins": -416230,
      "warnings": [],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 148,
    "yearOfManufacture": 2007,
  },
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DV20",
    "documents": [],
    "equipment": "VOY/S",
    "fuelTypes": [
      "MOGAS 98E5",
      "MOGAS 95E10",
      "100LL",
    ],
    "hidden": false,
    "imageUrl": "https://cdn.jetphotos.com/full/5/69415_1600241420.jpg",
    "location": "EFNU Cumulus Hangar",
    "maintenance": {
      "lastMaintenanceDate": "2025-03-01",
      "lastMaintenanceMins": 365100,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 50,
      "nextMaintenanceDate": null,
      "nextMaintenanceMins": 367800,
      "nextMaintenanceType": "50h",
      "reservedHours": 2,
      "totalPercentageHours": 5,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DV20",
    "notes": [
      {
        "severity": "caution",
        "text": "Koneen palosammutin on huollossa. Ei ole pakollinen varuste, mutta huomioitava!",
      },
    ],
    "preferredFuelType": "MOGAS 98E5",
    "registration": "OH-IHQ",
    "seats": 2,
    "status": {
      "cautions": [],
      "lastLandingAirport": "EFHK",
      "lastLandingTimeUtc": "2025-05-03T11:10:00.000Z",
      "minsUntilNextMaintenance": -432380,
      "remainingFuelLitres": 25,
      "totalTime": "13336:20",
      "usableMins": -432200,
      "warnings": [],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 77,
    "yearOfManufacture": 2010,
  },
]
`;

exports[`GET /aircrafts/id Get aircraft with valid registration should return the aircraft 1`] = `
{
  "active": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "displayName": "Diamond DA40",
  "documents": [],
  "equipment": "SDFGY/S",
  "fuelTypes": [
    "JET A-1",
  ],
  "hidden": false,
  "imageUrl": "https://www.flyfinland.fi/photos/original/29416.jpg",
  "location": "EFNU BF-hangar 21",
  "maintenance": {
    "lastMaintenanceDate": "2024-11-10",
    "lastMaintenanceMins": 282540,
    "lastMaintenanceType": "200h",
    "maintenanceCycle": 100,
    "nextMaintenanceDate": null,
    "nextMaintenanceMins": 286680,
    "nextMaintenanceType": "100h",
    "reservedHours": 2,
    "totalPercentageHours": 10,
  },
  "manufacturer": "Diamond Aircraft",
  "model": "DA40",
  "notes": [
    {
      "severity": "note",
      "text": "Keep oil quantity level in the middle of the approved range - do not add to full!",
    },
  ],
  "preferredFuelType": "JET A-1",
  "registration": "OH-STL",
  "seats": 4,
  "status": {
    "cautions": [],
    "lastLandingAirport": "EFHK",
    "lastLandingTimeUtc": "2026-07-14T09:25:00.000Z",
    "minsUntilNextMaintenance": -416710,
    "remainingFuelLitres": 20,
    "totalTime": "11723:10",
    "usableMins": -416230,
    "warnings": [],
  },
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
  "usableFuelLitres": 148,
  "yearOfManufacture": 2007,
}
`;
